    * Add the alarm method to the Sys class.
    * The kill method in the Sys class can be used in Windows if $pid is equal to the current process id.
  [Incompatible Changes]
    * Remove the Sys::FileTest class.
    * Remove throwing exceptions in the ualarm method in the Sys::Signal class.
    * Remove the signal_go method in the Sys::Signal class.
  [Bug Fix with Incompatible Changes]
    * The S method in the Sys class returns 0 if the file do not exists.
0.501 2023-11-23
  [Incompatible Changes]
     * The return type of the following methods in the Sys become void.
      chdir
      chmod
      mkdir
      rmdir
      opendir
      closedir
      close
      unlink
      rename
      bind
      listen
      connect
      shutdown
      socketpair
      setsockopt
      truncate
      flock
      print
      say
      printf
      seek
      utime
      chown
      open
      fdopen
      sysopen
      say
      kill
      pipe
       

0.500 2023-11-17
  [New Features and Incompatible Changes]
    * Rename the SIG_IO method in the Sys::Signal class is renamed to SIG_GO.
    * Change the signal_io method in the Sys::Signal class is renamed to signal_go.
      [Before]
      static method signal_io : Sys::Signal::Handler ($signum : int, $fd : int);
      [After]
      static method signal_go : Sys::Signal::Handler ($signum : int);
      
    * Add the SET_SIG_GO_WRITE_FD method to the Sys::Signal class.
  
  [New Features]
    * Add the O_BINARY method to the Sys::IO::Constant class.
    * Add the O_TEXT method to the Sys::IO::Constant class.
    * Add the _pipe method to the Sys::Process class.
    * The pipe method in the Sys class calls the _pipe method in the Sys::Process.
0.499 2023-11-17
  [New Features and Incompatible Changes]
    * Add the eq method to the Sys::Signal::Handler.
0.498 2023-11-16
  [New Features and Incompatible Changes]
    * Add the eq method to the Sys::Signal::Handler.
    * The signal method returns the old signal handler.