@@ -8,6 +8,12 @@
     * Remove the Sys::FileTest class.
     * Remove throwing exceptions in the ualarm method in the Sys::Signal class.
     * Remove the signal_go method in the Sys::Signal class.
+    * The getgroups method in the Sys::User class is changed.
+      [Before]
+      static method getgroups : int[] ();
+      [After]
+      static method getgroups : int ($size : int, $list : int[]);
+      
   [Bug Fix with Incompatible Changes]
     * The S method in the Sys class returns 0 if the file do not exists.
 0.501 2023-11-23
